--- a/GildedRose.Console/GildedRose.Console.csproj
+++ b/GildedRose.Console/GildedRose.Console.csproj
@@ -6,4 +6,8 @@
         <LangVersion>7.3</LangVersion>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
+    </ItemGroup>
+
 </Project>
